eks/gvisor-install.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: install-gvisor
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: install-gvisor
  template:
    metadata:
      labels:
        app: install-gvisor
    spec:
      hostPID: true
      hostNetwork: true
      tolerations:
        - operator: Exists
      containers:
        - name: installer
          image: ubuntu:22.04
          securityContext:
            privileged: true
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: host-root
              mountPath: /host
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: host-root
          hostPath:
            path: /
